test/langtools/tools/javac/valhalla/primitive-classes/ProjectionInstantiationTest.out
ProjectionInstantiationTest.java:13:9: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:14:9: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:16:40: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:17:40: compiler.err.projection.cant.be.instantiated
4 errors
